--- a/ADMIN/admin-dash/Admin-dash.html
+++ b/ADMIN/admin-dash/Admin-dash.html
@@ -22,14 +22,14 @@
             <div class="collapse navbar-collapse" id="collapsibleNavId">
                 <ul class="navbar-nav ms-auto mt-2 mt-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" href="./admin-dashboard.html" aria-current="page">Dashboard
+                        <a class="nav-link active" href="/ADMIN/admin-dash/Admin-dash.html" aria-current="page">Dashboard
                             <span class="visually-hidden">(current)</span></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="../../babies/babies.html">Database</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../../../auth/login/login.html">Log out</a>
+                        <a class="nav-link" href="/login/login.html">Log out</a>
                     </li>
             </div>
         </div>
