--- a/babies/reg-babies.html
+++ b/babies/reg-babies.html
@@ -3,41 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="/babies/reg-babies.css">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
 
-    <title>Baby Enrollment</title>
+    <title>Register Baby</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-sm navbar-light bg-light">
-        <div class="container">
-            <a class="navbar-brand" href="#"><b>DayStar</b></a>
-            <button class="navbar-toggler d-lg-none" type="button" data-bs-toggle="collapse"
-                data-bs-target="#collapsibleNavId" aria-controls="collapsibleNavId" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="collapsibleNavId">
-                <ul class="navbar-nav ms-auto mt-2 mt-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link active" href="../dashboard/admin-dashboard.html" aria-current="page">Dashboard
-                            <span class="visually-hidden">(current)</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="../../babies/babies.html">Database</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="../../../auth/login/">Log out</a>
-                    </li>
-            </div>
+    <nav class="navbar navbar-expand-lg custom-bg-color">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">
+            <img src="/images/yellow logo.png" alt="Logo" width="150" height="130" class="d-inline-block align-text-top">
+          </a>
+          
+          <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav ms-auto">
+              <li class="nav-item">
+                <a class="nav-link" href="/AboutUs.html">Admin</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Sitters</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Babies</a>
+              </li>
+  
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Login As
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="/forms/login.html">Admin</a></li>
+                  <li><a class="dropdown-item" href="/forms/login.html">Parent</a></li>
+                  <li><a class="dropdown-item" href="/forms/login.html">Sitter</a></li>
+                </ul>
+              </li>
+            </ul>
+          </div>
         </div>
     </nav>
     <div class="container">
         <div class="row mt-5">
             <div class="col text-center">
-                <h1 class="display-2">New Baby Enrollment</h1>
+                <h1 class="display-2">Register New Baby</h1>
             </div>
         </div>
         <div class="row justify-content-center">
@@ -90,7 +99,7 @@
             </div>
         </div>
     </div>
-    <script src="./script.js"></script>
+    <script src="/babies/reg-babies.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
