--- a/login/login.html
+++ b/login/login.html
@@ -4,20 +4,52 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
-
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-
 
     <title>Log In</title>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="login.css">
 </head>
 
 <body>
+    <nav class="navbar navbar-expand-lg custom-bg-color">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">
+            <img src="/images/yellow logo.png" alt="Logo" width="150" height="130" class="d-inline-block align-text-top">
+          </a>
+          
+          <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav ms-auto">
+              <li class="nav-item">
+                <a class="nav-link" href="/AboutUs.html">Admin</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Sitters</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Babies</a>
+              </li>
+  
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Login As
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="/forms/login.html">Admin</a></li>
+                  <li><a class="dropdown-item" href="/forms/login.html">Parent</a></li>
+                  <li><a class="dropdown-item" href="/forms/login.html">Sitter</a></li>
+                </ul>
+              </li>
+            </ul>
+          </div>
+        </div>
+    </nav>
+
     <div class="container">
         <div class="row mt-5">
             <div class="col text-center">
                 <h1 class="display-1">DayStar</h1>
-                <h1 class="text-muted">Day care</h1>
+                <h1 class="text-muted">LOGIN</h1>
             </div>
         </div>
         <div class="row justify-content-center">
@@ -39,7 +71,7 @@
             </div>
         </div>
     </div>
-
+ 
     <script src="./script.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
