added staff files

--- a/nice.html
+++ b/nice.html
@@ -10,7 +10,7 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f8f8f8;
+            background-color: #38bfc3;
         }
         .container {
             max-width: 800px;
@@ -49,19 +49,19 @@
     <div class="team-member">
         <img src="images/avatar 1.jpeg" alt="John Doe">
         <div>
-            <h2>John Doe</h2>
+            <h2>Elijah Kakoza</h2>
             <p>Position: Software Engineer</p>
-            <p>Role: Developer</p>
+            <p>Role: </p>
             <p>Bio: John is a passionate developer...</p>
         </div>
     </div>
 
     <div class="team-member">
-        <img src="images/avatar 1.jpeg" alt="Emma">
+        <img src="images/download3.jpeg" alt="Emma">
         <div>
-            <h2>Jane Smith</h2>
-            <p>Position: Project Manager</p>
-            <p>Role: Manager</p>
+            <h2>John Kakoma</h2>
+            <p>Position: Gen-Manager</p>
+            <p>Role: Project manager</p>
             <p>Bio: Jane is an experienced project manager...</p>
         </div>
     </div>
@@ -69,30 +69,30 @@
     <div class="team-member">
         <img src="images/avatar 2.jpeg" alt="Winnie">
         <div>
-            <h2>Jane Smith</h2>
-            <p>Position: Project Manager</p>
-            <p>Role: Manager</p>
-            <p>Bio: Jane is an experienced project manager...</p>
+            <h2>Jane Mukisa</h2>
+            <p>Position: DevOps</p>
+            <p>Role: Back-end dev</p>
+            <p>Bio: Jane is an experienced DevOps personel.</p>
         </div>
     </div>
 
     <div class="team-member">
-        <img src="images/avatar 1.jpeg" alt="Mirtin">
+        <img src="images/download4.jpeg" alt="Mirtin">
         <div>
-            <h2>Jane Smith</h2>
+            <h2>Samsom Mugabi</h2>
             <p>Position: Project Manager</p>
-            <p>Role: Manager</p>
-            <p>Bio: Jane is an experienced project manager...</p>
+            <p>Role: Scrum Master</p>
+            <p>Bio: Samson is an experienced Scrum Master...</p>
         </div>
     </div>
 
     <div class="team-member">
-        <img src="images/avatar 1.jpeg" alt="kuchana">
+        <img src="images/avatar3.jpeg" alt="kuchana">
         <div>
-            <h2>Jane Smith</h2>
-            <p>Position: Project Manager</p>
-            <p>Role: Manager</p>
-            <p>Bio: Jane is an experienced project manager...</p>
+            <h2>Kirabo Priscilla</h2>
+            <p>Position: UI/UX designer</p>
+            <p>Role:Front-end dev </p>
+            <p>Bio: Jane is an experienced UI/UX developer...</p>
         </div>
     </div>
 
