--- a/emma.html
+++ b/emma.html
@@ -5,18 +5,56 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Staff Lists</title>
     <style>
+        body {
+            padding: 0;
+            margin: 0;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background-color: #38bfc3;
+        }
         table {
+            position: absolute;
+            left: 30px;
+            top: 50px;
+            translate: translate(-50%, -50%);
             border-collapse: collapse;
-            width: 100%;
+            width: 95%;
+            height: 100px;
+            border: 1px solid whitesmoke;
+            box-shadow: 2px 2px 12px rgba(0, 0, 0, 0.2), -1px, -1px, 8px black
+        }
+        tr {
+            transition: all .2s ease-in;
+            cursor: pointer;
         }
         th, td {
             border: 1px solid #dddddd;
             text-align: left;
             padding: 8px;
         }
-        th {
-            background-color: #efeff0;
+
+        #header{
+            background-color: #3887BE;
+            color: white;
         }
+
+        h2 {
+            font-weight: 600;
+            text-align: center;
+            background-color: #52D3D8;
+            color: black;
+            padding: 10px, 0px;
+        }
+        tr:nth-child(even) {
+            background-color: #B4D4FF;
+        }
+
+
+        tr:hover {
+            background-color: white;
+            transform: scale(1.02);
+            box-shadow: 2px 2px 12px rgba(0, 0, 0, 0.2), -1px, -1px, 8px black
+        }
+
         h2 {
            position: center;
         }
@@ -24,75 +62,72 @@
 </head>
 <body>
 
-<h2>Staff Information</h2>
+<h2>Staff List</h2>
 
 <table>
-  <tr>
+  <tr id="header">
     <th>Name</th>
     <th>Email</th>
     <th>Phone Number</th>
-    <th>Employment Period</th>
+    <th>Department</th>
     <th>Role</th>
   </tr>
   <tr>
     <td>John Kakoma</td>
     <td>john@gmail.com</td>
     <td>123-456-7890</td>
-    <td>2020 - Present</td>
+    <td>Board</td>
     <td>Gen-Manager</td>
   </tr>
   <tr>
     <td>Jane Mukisa</td>
     <td>jane@gmail.com</td>
     <td>987-654-3210</td>
-    <td>2018 - Present</td>
+    <td>DevOps</td>
     <td>Developer</td>
   </tr>
   <tr>
     <td>Samsom Mugabi</td>
     <td>john@gmail.com</td>
     <td>123-456-7890</td>
-    <td>2020 - Present</td>
+    <td>Projects</td>
     <td>Scrum master</td>
   </tr>
   <tr>
     <td>Kirabo Priscilla</td>
-    <td>Priscilaa@gmail.com</td>
+    <td>priscilaa@gmail.com</td>
     <td>987-654-3210</td>
-    <td>2018 - Present</td>
+    <td>UI/UX</td>
     <td>Developer</td>
   </tr>
   <tr>
-  <tr>
     <td>Elijah Kakoza</td>
-    <td>Elijah@gmail.com</td>
+    <td>elijah@gmail.com</td>
     <td>123-456-7890</td>
-    <td>2020 - Present</td>
+    <td>Sales</td>
     <td>Sales manager</td>
   </tr>
   <tr>
     <td>Ruth Mukasa</td>
     <td>jane@example.com</td>
     <td>987-654-3210</td>
-    <td>2018 - Present</td>
+    <td>DevOps</td>
     <td>Senior Developer</td>
   </tr>
-  <tr>
   <tr>
     <td>Josephine kisakye</td>
     <td>john@example.com</td>
     <td>123-456-7890</td>
-    <td>2020 - Present</td>
+    <td>Sales</td>
     <td>Marketier</td>
   </tr>
   <tr>
     <td>Emmanuel Smith</td>
     <td>jane@example.com</td>
     <td>987-654-3210</td>
-    <td>2018 - Present</td>
+    <td>DevOps</td>
     <td>Junior Developer</td>
   </tr>
-  <!-- U can add more rows by copying and pasting the data below but with in the table -->
 </table>
 
 </body>
