added background color to the forms

--- a/staffprof.html
+++ b/staffprof.html
@@ -39,6 +39,7 @@
         .team-member p {
             margin: 0;
         }
+
     </style>
 </head>
 <body>
@@ -51,7 +52,7 @@
         <div>
             <h2>Elijah Kakoza</h2>
             <p>Position: Software Engineer</p>
-            <p>Role: </p>
+            <p>Role: DevOps </p>
             <p>Bio: John is a passionate developer...</p>
         </div>
     </div>
