--- a/staffreg.html
+++ b/staffreg.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Registration Form</title>
-    <link rel="stylesheet" href="register.css" />
+    <link rel="stylesheet" href="/staffreg.css" />
   </head>
   <body>
+    <div class="navbar">
+      <a href="#">Home</a>
+      <a href="#">About</a>
+      <a href="#">Contact</a>
+    </div>
+
     <div class="container">
       <div class="form-box">
         <form id="Fillform" action="#">
@@ -31,7 +37,6 @@
             />
           </div>
 
-
           <div class="input-box">
             <input
               type="text"
@@ -42,16 +47,16 @@
           </div>
 
           <div class="input-box">
-            <input type="text" id="contact" name="contact" placeholder="enter contact" />
+            <input
+              type="text"
+              id="contact"
+              name="contact"
+              placeholder="enter contact"
+            />
           </div>
 
           <div class="input-box">
-            <input
-              type="text"
-              id="role"
-              name="role"
-              placeholder="enter role"
-            />
+            <input type="text" id="role" name="role" placeholder="enter role" />
           </div>
 
           <div class="button">
